fix from a thread layout and alignment

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -715,20 +715,22 @@ $left-gutter: 64px;
     mask-position: center;
     height: 18px;
     min-width: 18px;
-    background-color: $secondary-content;
+    background-color: $secondary-content !important;
     mask-repeat: no-repeat;
     mask-size: contain;
 }
 
 .mx_ThreadSummaryIcon {
+    display: inline-block;
     font-size: $font-12px;
-    color: $secondary-content;
+    color: $secondary-content !important;
     margin-top: 8px;
     margin-bottom: 8px;
 
     &::before {
         vertical-align: middle;
         margin-right: 8px;
+        margin-top: -2px;
     }
 }
 
